# Clicker

./: CMakeLists.txt  README.md  main.py  main_window.ui  main_window.ui.xml
assets/: resources.qrc  resources.rc
src/: clicker.h  main.cpp  mainwindow.cpp  mainwindow.h  threadHandler.h
